--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,8 @@
   "proxy": "http://localhost:8000",
   "private": true,
   "dependencies": {
+    "@headlessui/react": "^1.7.4",
+    "@heroicons/react": "^2.0.13",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
@@ -43,6 +45,6 @@
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.0",
-    "tailwindcss": "^3.0.24"
+    "tailwindcss": "^3.2.4"
   }
 }
